Fixed Alignment Issues in the Nav Icons

--- a/Client/src/styles/NavBar.css
+++ b/Client/src/styles/NavBar.css
@@ -12,11 +12,13 @@
 .nav-bar-item {
     display: flex;
     font-family: arial, Helvetica Neue, sans-serif; 
+    overflow: hidden;
     padding: 10px;
     font-size: 18px;
     font-weight: bold;
     margin: 0 14px 0;
     color: #686b78;
+    white-space: nowrap;
     justify-content: center;
     align-items: center;
 }
@@ -44,6 +46,8 @@
     font-family: arial, Helvetica Neue, sans-serif; 
     padding: 10px;
     font-size: 16px;
+    overflow: hidden;
+    white-space: nowrap;
     font-weight: 700;
     color: #686b78;
 }
